0.5.3/_sources/gallery/surface_multi_texture.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/surface_multi_texture.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_surface_multi_texture.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_surface_multi_texture.py:


Surface with multiple textures
==============================

This example demonstrates one possible method for displaying a 3D surface with
multiple textures.

Thanks to Emmanuel Reynaud and Luis Gutierrez for providing the gorgeous coral
model for this demo. You can find the data on FigShare:
https://zenodo.org/records/13380203

More information on the methods used to generate this model can be found in *L.
Gutierrez-Heredia, C. Keogh, E. G. Reynaud, Assessing the Capabilities of
Additive Manufacturing Technologies for Coral Studies, Education, and
Monitoring. Front. Mar. Sci. 5 (2018), doi:10.3389/fmars.2018.00278.*

A bit about 3D models
---------------------

A standard way to define a 3D model (mesh, or Surface in napari) is by listing
vertices (3D point coordinates) and faces (triplets of vertex indices - each
face is a triangle in 3D space). Meshes are often stored in "Wavefront" (.obj)
files, which may have companion material (.mtl) files that describe some
shading properties (base color, shinyness, etc.) for different parts of the
model.

In some cases, the color of a vertex is given by a single point value that is
then colormapped on the fly (`vertex_values`). In other cases, each vertex or
face may be assigned a specific color (`vertex_colors`). These methods are
demonstrated in :ref:`sphx_glr_gallery_surface_texture_and_colors.py`.

In the case of "photorealistic" models, the color of each vertex is instead
determined by mapping a vertex to a point in an image called a texture using 2D
texture coordinates in the range [0, 1]. The color of each individual pixel is
smoothly interpolated (sampled) on the fly from the texture (the GPU makes this
interpolation very fast).

Napari does not (yet) support models with multiple textures or materials. If
the textures don't overlap, you can display them on separate meshes as shown in
this demo. If the textures do overlap, you may instead be able to combine the
textures as images. This relies on textures having the same texture
coordinates, and may require resizing the textures to match each other.

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 46-54

.. code-block:: Python

    import os

    import matplotlib.pyplot as plt
    import pooch
    from vispy.io import imread, read_mesh

    import napari








.. GENERATED FROM PYTHON SOURCE LINES 55-57

Download the model
------------------

.. GENERATED FROM PYTHON SOURCE LINES 57-79

.. code-block:: Python

    download = pooch.DOIDownloader(progressbar=True)
    doi = '10.5281/zenodo.13380203'
    tmp_dir = pooch.os_cache('napari-surface-texture-example')
    os.makedirs(tmp_dir, exist_ok=True)
    data_files = {
        'mesh': 'PocilloporaDamicornisSkin.obj',
        # "materials": "PocilloporaVerrugosaSkinCrop.mtl",  # not yet supported
        'Texture_0': 'PocilloporaDamicornisSkin_Texture_0.jpg',
        'GeneratedMat2': 'PocilloporaDamicornisSkin_GeneratedMat2.png',
    }
    print(f'downloading data into {tmp_dir}')
    for file_name in data_files.values():
        if not (tmp_dir / file_name).exists():
            print(f'downloading {file_name}')
            download(
                f'doi:{doi}/{file_name}',
                output_file=tmp_dir / file_name,
                pooch=None,
            )
        else:
            print(f'using cached {tmp_dir / file_name}')





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    downloading data into /home/runner/.cache/napari-surface-texture-example
    downloading PocilloporaDamicornisSkin.obj
      0%|                                              | 0.00/93.8M [00:00<?, ?B/s]      0%|                                      | 18.4k/93.8M [00:00<09:44, 160kB/s]      0%|                                      | 56.3k/93.8M [00:00<05:56, 263kB/s]      0%|                                       | 131k/93.8M [00:00<03:31, 444kB/s]      0%|                                       | 283k/93.8M [00:00<01:57, 796kB/s]      1%|▏                                     | 606k/93.8M [00:00<01:00, 1.54MB/s]      1%|▍                                    | 1.24M/93.8M [00:00<00:31, 2.93MB/s]      3%|▉                                    | 2.52M/93.8M [00:00<00:16, 5.66MB/s]      5%|█▊                                   | 4.61M/93.8M [00:00<00:09, 9.75MB/s]      7%|██▌                                  | 6.56M/93.8M [00:01<00:07, 12.1MB/s]      9%|███▍                                 | 8.65M/93.8M [00:01<00:06, 14.1MB/s]     11%|████▏                                | 10.6M/93.8M [00:01<00:05, 15.1MB/s]     14%|█████                                | 12.7M/93.8M [00:01<00:05, 16.1MB/s]     16%|█████▊                               | 14.7M/93.8M [00:01<00:04, 16.6MB/s]     18%|██████▋                              | 16.8M/93.8M [00:01<00:04, 17.1MB/s]     20%|███████▍                             | 18.7M/93.8M [00:01<00:04, 17.1MB/s]     22%|████████▏                            | 20.8M/93.8M [00:01<00:04, 17.5MB/s]     24%|█████████                            | 22.8M/93.8M [00:01<00:04, 17.6MB/s]     27%|█████████▊                           | 24.9M/93.8M [00:02<00:03, 17.9MB/s]     29%|██████████▋                          | 27.0M/93.8M [00:02<00:03, 18.0MB/s]     31%|███████████▌                         | 29.2M/93.8M [00:02<00:03, 18.5MB/s]     33%|████████████▎                        | 31.3M/93.8M [00:02<00:03, 18.5MB/s]     36%|█████████████▏                       | 33.5M/93.8M [00:02<00:03, 18.7MB/s]     38%|██████████████                       | 35.6M/93.8M [00:02<00:03, 18.9MB/s]     40%|██████████████▉                      | 37.8M/93.8M [00:02<00:02, 19.0MB/s]     43%|███████████████▊                     | 40.0M/93.8M [00:02<00:02, 19.2MB/s]     45%|████████████████▋                    | 42.2M/93.8M [00:02<00:02, 19.1MB/s]     47%|█████████████████▌                   | 44.5M/93.8M [00:03<00:02, 19.4MB/s]     50%|██████████████████▍                  | 46.6M/93.8M [00:03<00:02, 19.4MB/s]     52%|███████████████████▎                 | 48.9M/93.8M [00:03<00:02, 19.5MB/s]     54%|████████████████████▏                | 51.1M/93.8M [00:03<00:02, 19.6MB/s]     57%|█████████████████████                | 53.3M/93.8M [00:03<00:02, 19.5MB/s]     59%|█████████████████████▉               | 55.6M/93.8M [00:03<00:01, 19.7MB/s]     62%|██████████████████████▊              | 57.9M/93.8M [00:03<00:01, 19.9MB/s]     64%|███████████████████████▋             | 60.2M/93.8M [00:03<00:01, 20.0MB/s]     67%|████████████████████████▋            | 62.4M/93.8M [00:03<00:01, 20.0MB/s]     69%|█████████████████████████▌           | 64.7M/93.8M [00:04<00:01, 20.1MB/s]     71%|██████████████████████████▍          | 67.0M/93.8M [00:04<00:01, 20.2MB/s]     74%|███████████████████████████▎         | 69.4M/93.8M [00:04<00:01, 20.3MB/s]     76%|████████████████████████████▎        | 71.7M/93.8M [00:04<00:01, 20.3MB/s]     79%|█████████████████████████████▏       | 74.0M/93.8M [00:04<00:00, 20.4MB/s]     81%|██████████████████████████████       | 76.3M/93.8M [00:04<00:00, 20.5MB/s]     84%|███████████████████████████████      | 78.8M/93.8M [00:04<00:00, 20.9MB/s]     87%|████████████████████████████████     | 81.3M/93.8M [00:04<00:00, 21.4MB/s]     89%|█████████████████████████████████    | 83.8M/93.8M [00:04<00:00, 21.6MB/s]     92%|██████████████████████████████████   | 86.4M/93.8M [00:05<00:00, 21.8MB/s]     95%|███████████████████████████████████  | 88.9M/93.8M [00:05<00:00, 21.9MB/s]     98%|████████████████████████████████████ | 91.4M/93.8M [00:05<00:00, 22.2MB/s]      0%|                                              | 0.00/93.8M [00:00<?, ?B/s]    100%|██████████████████████████████████████| 93.8M/93.8M [00:00<00:00, 524GB/s]
    downloading PocilloporaDamicornisSkin_Texture_0.jpg
      0%|                                              | 0.00/17.3M [00:00<?, ?B/s]      0%|                                      | 15.4k/17.3M [00:00<02:43, 106kB/s]      0%|                                      | 46.1k/17.3M [00:00<01:29, 193kB/s]      1%|▏                                     | 88.1k/17.3M [00:00<01:03, 270kB/s]      1%|▍                                      | 188k/17.3M [00:00<00:33, 504kB/s]      2%|▉                                      | 396k/17.3M [00:00<00:17, 973kB/s]      5%|█▊                                    | 805k/17.3M [00:00<00:08, 1.85MB/s]      9%|███▍                                 | 1.62M/17.3M [00:00<00:04, 3.58MB/s]     19%|██████▉                              | 3.27M/17.3M [00:00<00:02, 7.00MB/s]     36%|█████████████▍                       | 6.26M/17.3M [00:01<00:00, 13.1MB/s]     51%|███████████████████                  | 8.91M/17.3M [00:01<00:00, 16.2MB/s]     65%|████████████████████████▏            | 11.3M/17.3M [00:01<00:00, 17.8MB/s]     81%|█████████████████████████████▊       | 13.9M/17.3M [00:01<00:00, 19.4MB/s]     97%|███████████████████████████████████▊ | 16.7M/17.3M [00:01<00:00, 21.0MB/s]      0%|                                              | 0.00/17.3M [00:00<?, ?B/s]    100%|█████████████████████████████████████| 17.3M/17.3M [00:00<00:00, 98.3GB/s]
    downloading PocilloporaDamicornisSkin_GeneratedMat2.png
      0%|                                               | 0.00/120k [00:00<?, ?B/s]     15%|█████▉                                 | 18.4k/120k [00:00<00:00, 164kB/s]     45%|█████████████████▋                     | 54.3k/120k [00:00<00:00, 254kB/s]      0%|                                               | 0.00/120k [00:00<?, ?B/s]    100%|████████████████████████████████████████| 120k/120k [00:00<00:00, 543MB/s]




.. GENERATED FROM PYTHON SOURCE LINES 80-86

Load the model
--------------
Next, read the model data from the .obj file. Currently napari/vispy do not
support reading material properties (.mtl files) nor separate texture and
vertex indices (i.e. repeated vertices). Normal vectors read from the file
are also ignored and re-calculated from the faces.

.. GENERATED FROM PYTHON SOURCE LINES 86-88

.. code-block:: Python

    vertices, faces, _normals, texcoords = read_mesh(tmp_dir / data_files['mesh'])








.. GENERATED FROM PYTHON SOURCE LINES 89-94

Load the textures
-----------------
This model comes with two textures: `Texture_0` is generated from
photogrammetry of the actual object, and `GeneratedMat2` is a generated
material to fill in  parts of the model lacking photographic texture.

.. GENERATED FROM PYTHON SOURCE LINES 94-97

.. code-block:: Python

    photo_texture = imread(tmp_dir / data_files['Texture_0'])
    generated_texture = imread(tmp_dir / data_files['GeneratedMat2'])








.. GENERATED FROM PYTHON SOURCE LINES 98-99

This is what the texture images look like in 2D:

.. GENERATED FROM PYTHON SOURCE LINES 99-110

.. code-block:: Python

    fig, axs = plt.subplots(1, 2)
    axs[0].set_title(f'Texture_0 {photo_texture.shape}')
    axs[0].imshow(photo_texture)
    axs[0].set_xticks((0, photo_texture.shape[1]), labels=(0.0, 1.0))
    axs[0].set_yticks((0, photo_texture.shape[0]), labels=(0.0, 1.0))
    axs[1].set_title(f'GeneratedMat2 {generated_texture.shape}')
    axs[1].imshow(generated_texture)
    axs[1].set_xticks((0, generated_texture.shape[1]), labels=(0.0, 1.0))
    axs[1].set_yticks((0, generated_texture.shape[0]), labels=(0.0, 1.0))
    fig.show()




.. image-sg:: /gallery/images/sphx_glr_surface_multi_texture_001.png
   :alt: Texture_0 (8192, 8192, 3), GeneratedMat2 (2048, 2048, 4)
   :srcset: /gallery/images/sphx_glr_surface_multi_texture_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 111-116

Create the napari layers
------------------------
Next create two separate layers with the same mesh - once with each texture.
In this example the texture coordinates happen to be the same for each
texture, but this is not a strict requirement.

.. GENERATED FROM PYTHON SOURCE LINES 116-129

.. code-block:: Python

    photo_texture_layer = napari.layers.Surface(
        (vertices, faces),
        texture=photo_texture,
        texcoords=texcoords,
        name='Texture_0',
    )
    generated_texture_layer = napari.layers.Surface(
        (vertices, faces),
        texture=generated_texture,
        texcoords=texcoords,
        name='GeneratedMat2',
    )








.. GENERATED FROM PYTHON SOURCE LINES 130-134

Add the layers to a viewer
--------------------------
Finally, create the viewer and add the Surface layers.
sphinx_gallery_thumbnail_number = 2

.. GENERATED FROM PYTHON SOURCE LINES 134-144

.. code-block:: Python

    viewer = napari.Viewer(ndisplay=3)

    viewer.add_layer(photo_texture_layer)
    viewer.add_layer(generated_texture_layer)

    viewer.camera.angles = (90.0, 0.0, -75.0)
    viewer.camera.zoom = 75

    if __name__ == '__main__':
        napari.run()



.. image-sg:: /gallery/images/sphx_glr_surface_multi_texture_002.png
   :alt: surface multi texture
   :srcset: /gallery/images/sphx_glr_surface_multi_texture_002.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 32.139 seconds)


.. _sphx_glr_download_gallery_surface_multi_texture.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: surface_multi_texture.ipynb <surface_multi_texture.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: surface_multi_texture.py <surface_multi_texture.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: surface_multi_texture.zip <surface_multi_texture.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
